aws-vpc-ec2-ngnix/security_group.tf
resource "aws_security_group" "ngnix-sg" {
  vpc_id = aws_vpc.my_vpc.id

  # Allow inbound HTTP traffic
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # allow outbound traffic
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "ngnix-sg"
  }

}
